--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,8 @@ default: &default
 development:
   <<: *default
   database: portfolio_api_development
-
+  username: <%= ENV['DEVELOPMENT_DATABASE_USERNAME'] %>
+  password: <%= ENV['DEVELOPMENT_DATABASE_PASSWORD'] %>
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
